manifests/kitchen/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: kitchen-backend
  name: kitchen-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kitchen-backend
  template:
    metadata:
      labels:
        io.kompose.service: kitchen-backend
    spec:
      containers:
        - image: ghcr.io/startupnationlabs/micro-restaurant-nestjs-public/kitchen-service:main
          name: kitchen-backend
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
